--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -5,7 +5,7 @@
   },
   "pages": {
     "home": "Home",
-    "services": "Services",
+    "join": "Mitglied werden",
     "terms": "Disclaimer"
   },
   "buttons": {
