Basic form with uploadcare and firebase hosting

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -6,7 +6,7 @@
   "pages": {
     "home": "Home",
     "label": "The Label",
-    "join": "Join",
+    "join": "Join Us",
     "members": "Members",
     "contact": "Contact",
     "terms": "Terms"
