Fix admin member handling

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -27,5 +27,8 @@
     "visitWebsite": "Webseite Besuchen",
     "allMembers": "Alle Mitglieder",
     "learnMore": "Mehr Erfahren"
+  },
+  "error": {
+    "empty": "Nichts anzuzeigen"
   }
 }
