Adjust copy, add download section

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -6,7 +6,7 @@
   "pages": {
     "home": "Home",
     "label": "Das Label",
-    "join": "Beitreten",
+    "join": "Mitmachen",
     "members": "Mitglieder",
     "contact": "Kontakt",
     "terms": "Impressum"
