Add editorial info

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -26,7 +26,8 @@
     "cancel": "Abbrechen",
     "visitWebsite": "Webseite Besuchen",
     "allMembers": "Alle Mitglieder",
-    "learnMore": "Mehr Erfahren"
+    "learnMore": "Mehr Erfahren",
+    "downloadLogoPackage": "Logo Dateien Herunterladen"
   },
   "error": {
     "empty": "Nichts anzuzeigen"
