--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -26,7 +26,8 @@
     "cancel": "Cancel",
     "visitWebsite": "Visit Website",
     "allMembers": "All Members",
-    "learnMore": "Learn More"
+    "learnMore": "Learn More",
+    "downloadLogoPackage": "Get Logo Package"
   },
   "error": {
     "empty": "Nothing to show"
