Add stories page, copy adjustments

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -8,6 +8,7 @@
     "label": "Das Label",
     "join": "Mitmachen",
     "members": "Mitglieder",
+    "stories": "Geschichten",
     "contact": "Kontakt",
     "terms": "Impressum"
   },
