--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -8,6 +8,7 @@
     "label": "The Label",
     "join": "Join Us",
     "members": "Members",
+    "stories": "Stories",
     "contact": "Contact",
     "terms": "Terms"
   },
