Improve admin, add to menu

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -10,7 +10,8 @@
     "members": "Mitglieder",
     "stories": "Geschichten",
     "contact": "Kontakt",
-    "terms": "Impressum"
+    "terms": "Impressum",
+    "admin": "Admin"
   },
   "buttons": {
     "accept": "Akzeptieren",
