--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -10,7 +10,8 @@
     "members": "Members",
     "stories": "Stories",
     "contact": "Contact",
-    "terms": "Terms"
+    "terms": "Terms",
+    "admin": "Admin"
   },
   "buttons": {
     "accept": "Accept",
