--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -80,5 +80,6 @@
     "Verkehr / Transport / Logistik",
     "Versicherung",
     "Öffentliche Verwaltung"
-  ]
+  ],
+  "free-notice": "*Änderungen vorbehalten. {mib} ist bestrebt diese Plattform kostenlos und ohne Werbung anzubieten. Sponsoren sind willkommen."
 }
