--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -80,5 +80,6 @@
     "Transport / Transportation / Logistics",
     "Insurance",
     "Public administration"
-  ]
+  ],
+  "free-notice": "*Subject to change. {mib} is dedicated to offer all services free of charge and without ads. Sponsors are welcome."
 }
