Add "values" section

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -81,5 +81,6 @@
     "Versicherung",
     "Öffentliche Verwaltung"
   ],
-  "free-notice": "*Änderungen vorbehalten. {mib} ist bestrebt diese Plattform kostenlos und ohne Werbung anzubieten. Sponsoren sind willkommen."
+  "free-notice": "*Änderungen vorbehalten. {mib} ist bestrebt diese Plattform kostenlos und ohne Werbung anzubieten. Sponsoren sind willkommen.",
+  "placeholder": "In Bearbeitung"
 }
