--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -81,6 +81,6 @@
     "Versicherung",
     "Öffentliche Verwaltung"
   ],
-  "free-notice": "*Änderungen vorbehalten. {mib} ist bestrebt diese Plattform kostenlos und ohne Werbung anzubieten. Sponsoren sind willkommen.",
+  "free-notice": "*Hilf uns, unsere Dienstleistungen kostenlos und werbefrei zu halten, indem du Sponsor wirst.",
   "placeholder": "In Bearbeitung"
 }
