--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -81,6 +81,6 @@
     "Insurance",
     "Public administration"
   ],
-  "free-notice": "*Subject to change. {mib} is dedicated to offer all services free of charge and without ads. Sponsors are welcome.",
+  "free-notice": "*Help us to provide our services free of charge and without ads by becoming a sponsor.",
   "placeholder": "work in progress"
 }
