--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -8,7 +8,7 @@
     "label": "Das Label",
     "join": "Mitmachen",
     "members": "Mitglieder",
-    "stories": "Geschichten",
+    "stories": "Portraits",
     "contact": "Kontakt",
     "terms": "Impressum",
     "admin": "Admin"
