Disolve contact page into impressum

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -9,8 +9,7 @@
     "join": "Mitmachen",
     "members": "Mitglieder",
     "stories": "Portraits",
-    "contact": "Kontakt",
-    "terms": "Impressum",
+    "legal": "Impressum",
     "admin": "Admin"
   },
   "buttons": {
