--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -9,8 +9,7 @@
     "join": "Join Us",
     "members": "Members",
     "stories": "Stories",
-    "contact": "Contact",
-    "terms": "Terms",
+    "legal": "Legal",
     "admin": "Admin"
   },
   "buttons": {
