Improve join form

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -17,6 +17,7 @@
     "edit": "Bearbeiten",
     "discard": "Verwerfen",
     "change": "Ändern",
+    "changeSelection": "Auswahl Ändern",
     "continue": "Weiter",
     "back": "Zurück",
     "save": "Speichern",
