--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -17,6 +17,7 @@
     "edit": "Edit",
     "discard": "Discard",
     "change": "Change",
+    "changeSelection": "Change Selection",
     "continue": "Continue",
     "back": "Back",
     "save": "Save",
