Rename legal page

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -9,7 +9,7 @@
     "join": "Mitmachen",
     "members": "Mitglieder",
     "stories": "Portraits",
-    "legal": "Impressum",
+    "about": "Impressum",
     "admin": "Admin"
   },
   "buttons": {
