--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -9,7 +9,7 @@
     "join": "Join Us",
     "members": "Members",
     "stories": "Stories",
-    "legal": "Legal",
+    "about": "About",
     "admin": "Admin"
   },
   "buttons": {
