--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -44,46 +44,46 @@
     "empty": "Nichts anzuzeigen"
   },
   "industries": [
-    "Administration / Verwaltung / Bürowesen",
-    "Automobil / Automobilzulieferer",
+    "Administration/Verwaltung/Bürowesen",
+    "Automobil/Automobilzulieferer",
     "Banken",
-    "Baugewerbe / Architektur",
-    "Beratung / Consulting",
-    "Bildung / Universität / FH / Schulen",
+    "Baugewerbe/Architektur",
+    "Beratung/Consulting",
+    "Bildung/Universität/FH/Schulen",
     "Chemie",
     "Dienstleistung",
-    "Druck / Papier / Verpackung",
-    "EDV / IT",
-    "Einkauf / Beschaffung",
-    "Elektro / Elektronik",
+    "Druck/Papier/Verpackung",
+    "EDV/IT",
+    "Einkauf/Beschaffung",
+    "Elektro/Elektronik",
     "Energiewirtschaft",
     "Finanzen",
-    "Forschung / Entwicklung / Wissenschaft",
-    "Gesundheitswesen / Soziales / Pflege",
-    "Handel / Konsum",
+    "Forschung/Entwicklung/Wissenschaft",
+    "Gesundheitswesen/Soziales/Pflege",
+    "Handel/Konsum",
     "Handwerk",
-    "Immobilien / Facility Management",
+    "Immobilien/Facility Management",
     "Industrie",
-    "Internet / Multimedia",
-    "Kunst / Kultur / Unterhaltung",
-    "Marketing / Werbung / PR",
+    "Internet/Multimedia",
+    "Kunst/Kultur/Unterhaltung",
+    "Marketing/Werbung/PR",
     "Marktforschung",
-    "Maschinen / Anlagenbau",
+    "Maschinen/Anlagenbau",
     "Medien",
-    "Medizin / Pharma",
+    "Medizin/Pharma",
     "Medizintechnik",
-    "Nahrungsmittel / Land / Forstwirtschaft",
-    "Personalwesen / Personalbeschaffung",
+    "Nahrungsmittel/Land/Forstwirtschaft",
+    "Personalwesen/Personalbeschaffung",
     "Rechtsberatung",
-    "Seminar / Messeanbieter",
+    "Seminar/Messeanbieter",
     "Sonstige Branchen",
-    "Sport / Fitness / Beauty",
-    "Steuerberatung / Wirtschaftsprüfung",
+    "Sport/Fitness/Beauty",
+    "Steuerberatung/Wirtschaftsprüfung",
     "Telekommunikation",
     "Textilbranche",
-    "Tourismus / Hotel / Gastronomie",
+    "Tourismus/Hotel/Gastronomie",
     "Vereine",
-    "Verkehr / Transport / Logistik",
+    "Verkehr/Transport/Logistik",
     "Versicherung",
     "Öffentliche Verwaltung"
   ],
