--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -44,46 +44,46 @@
     "empty": "Nothing to show"
   },
   "industries": [
-    "Administration / Administration / Office",
-    "Automotive / automotive supplier",
+    "Administration/Administration/Office",
+    "Automotive/automotive supplier",
     "Banks",
-    "Construction / Architecture",
+    "Construction/Architecture",
     "Consulting",
-    "Education / University / FH / Schools",
+    "Education/University/FH/Schools",
     "Chemistry",
     "Service",
-    "Print / Paper / Packaging",
-    "EDV / IT",
-    "Purchasing / Procurement",
-    "Electrical / Electronics",
+    "Print/Paper/Packaging",
+    "EDV/IT",
+    "Purchasing/Procurement",
+    "Electrical/Electronics",
     "Power supply",
     "Finance",
-    "Research / Development / Science",
-    "Healthcare / Social Services / Care",
-    "Retail / Consumption",
+    "Research/Development/Science",
+    "Healthcare/Social Services/Care",
+    "Retail/Consumption",
     "Crafts",
-    "Real Estate / Facility Management",
+    "Real Estate/Facility Management",
     "Industry",
-    "Internet / Multimedia",
-    "Arts / Culture / Entertainment",
-    "Marketing / Advertising / PR",
+    "Internet/Multimedia",
+    "Arts/Culture/Entertainment",
+    "Marketing/Advertising/PR",
     "Market research",
-    "Machines / Plant Engineering",
+    "Machines/Plant Engineering",
     "Media",
-    "Medicine / Pharmaceuticals",
+    "Medicine/Pharmaceuticals",
     "Medical technology",
-    "Food / Agriculture / Forestry",
-    "Human Resources / Recruitment",
+    "Food/Agriculture/Forestry",
+    "Human Resources/Recruitment",
     "Legal Advice",
-    "Seminar / Exhibition provider",
+    "Seminar/Exhibition provider",
     "Other industries",
-    "Sports / Fitness / Beauty",
-    "Tax Consultancy / Auditing",
+    "Sports/Fitness/Beauty",
+    "Tax Consultancy/Auditing",
     "Telecommunications",
     "Textile industry",
-    "Tourism / Hotel / Gastronomy",
+    "Tourism/Hotel/Gastronomy",
     "Clubs",
-    "Transport / Transportation / Logistics",
+    "Transport/Transportation/Logistics",
     "Insurance",
     "Public administration"
   ],
