Introduce story page, add indiz story, refactor layout

--- a/assets/locale/de.json
+++ b/assets/locale/de.json
@@ -5,6 +5,7 @@
     "apply": "Bewerben",
     "explore": "Entdecken",
     "stories": "Portraits",
+    "story": "Portrait",
     "about": "Impressum",
     "admin": "Admin"
   },
