--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -5,6 +5,7 @@
     "apply": "Apply",
     "explore": "Explore",
     "stories": "Stories",
+    "story": "Story",
     "about": "About",
     "admin": "Admin"
   },
